<resources>
    //placeholders
    <string name="two_words_separated_by_colon">%1$s: %2$s</string>
    <string name="two_words_separated_by_equals_sign_and_ending_with_colon">%1$s = %2$s:</string>
    <string name="two_words_separated_by_comma">%1$s, %2$s</string>
    <string name="two_words_separated_by_space">%1$s %2$s</string>
    <string name="two_words_without_separating">%1$s%2$s</string>

    <string name="app_name">Transportation problem</string>
    <string name="preference_file_key">transportation_problem_settings</string>

    <string name="suppliers">Suppliers</string>
    <string name="consumers">Consumers</string>
    <string name="supplier_a">Supplier A</string>
    <string name="from_supplier_a">from Supplier A</string>
    <string name="consumer_b">Consumer B</string>
    <string name="consumer_b_diff_ru_ending">Consumer B</string>
    <string name="demands">Demands</string>
    <string name="supplies">Supplies</string>
    <string name="demand">Demand</string>
    <string name="supply">Supply</string>
    <string name="costs">Costs</string>
    <string name="solution">Solution</string>
    <string name="history">History</string>
    <string name="about_app">About app</string>
    <string name="reset_task_conditions">Reset task conditions</string>
    <string name="exit">Exit</string>
    <string name="field_must_not_be_empty">The field must not be empty</string>

    <string name="add_supplier">Add supplier</string>
    <string name="add_consumer">Add consumer</string>
    <string name="enter_supply">Enter supply</string>
    <string name="enter_demand">Enter demand</string>
    <string name="add">Add</string>
    <string name="adding">Adding</string>
    <string name="cancel">Cancel</string>
    <string name="enter">Enter</string>
    <string name="ok">OK</string>
    <string name="error">Error!</string>

    <string name="suppliers_a1_an">Suppliers:\nA[1]..A[n]</string>
    <string name="consumers_b1_bn">Consumers: B[1]..B[m]</string>

    <string name="what_method_use_to_get_reference_plan">What method to use to get a reference plan?</string>
    <string name="vogels_approximation_method">Vogel’s approximation method</string>
    <string name="northwest_corner_method">Northwest corner method</string>
    <string name="solve">Solve</string>
    <string name="minimum_costs">Minimum costs</string>
    <string name="transport_to">transport to</string>
    <string name="units_amount_of_goods">units amount of goods =</string>

    <string name="transports_colon">transports:</string>
    <string name="expects_colon">expects:</string>
    <string name="delete_all">Delete all</string>

    <string name="suppliers_quantity">Number of suppliers</string>
    <string name="consumers_quantity">Number of consumers</string>
    <string name="write">Write</string>
    <string name="support_email">kainullov@gmail.com</string>
    <string name="do_not_show_hints">Don\'t show hints</string>
    <string name="incorrect_data">Incorrect data</string>

    <string name="add_suppliers_hint">Click to add a supplier</string>
    <string name="add_consumers_hint">Click to add a consumer</string>
    <string name="delete_item_hint">You can click on the cross to remove an item or \"swipe\" an item from the screen to delete</string>
    <string name="swipe_items_hint">If you take an element on the left, you can swap it with other elements</string>
    <string name="fill_costs_hint">The cost matrix is displayed here, based on the number of suppliers and the number of consumers.</string>
    <string name="get_solution_hint">To get a solution, click on the \"Solve\" button, first you need to fill in the screens: \"Suppliers\", \"Consumers\", \"Costs\"</string>


    <string name="about_app_text">This application was created to automate the planning of cargo transportation by solving a transportation problem using the potential method.\n\n
        There are 4 main screens in the application:\n
        1) The \"Suppliers\" screen. In it, the user can add suppliers and assign stocks for them. In order to do this, you need to click on the red round button, in the dialog box that appears, enter the stock and click on the "Add" button. A new supplier is added to the list with suppliers. We can remove a supplier by clicking on the cross at a particular supplier or by \“sweeping\” an element with a supplier on the screen to the left or right. We can also swap suppliers by grabbing the element of a specific supplier on the left.\n
        2) The \"Consumers\" screen. In it, the user can add consumers and assign needs to them. In order to do this, you need to click on the green round button, in the dialog box that appears, enter the need and click on the "Add" button. A new consumer will be added to the list with consumers. We can remove a consumer by clicking on the cross at a specific consumer or by \“sweeping\” an element with a consumer on the screen to the left or right. We can also swap consumers by grabbing the element of a specific consumer on the screen on the left.\n
        3) The \"Costs\" screen. In it, the user can enter the transportation costs in the matrix formed on the basis of suppliers and consumers, assigned in the "Providers" screen and the "Consumers" screen.\n
        4) The \"Solution\" screen. In it, the user, by clicking on the button with the inscription "Solve", will be able to obtain a solution to the transport problem using the potential method. The decision will be obtained if the screens are correctly filled: "Suppliers", "Consumers", "Costs". The solution is a graph, the nodes of the graph are suppliers and consumers. Connections between nodes indicate the direction of traffic. Under the graph, detailed decision information will be provided. The minimum costs will be shown above the graph.\n\n
        You can move between the main screens by swiping, as well as switching menu items at the bottom of the screen.\n
        There are 2 buttons in the top toolbar:\n
        By clicking on the button on the left, a menu with three items appears.\n
        By clicking on the \"Reset task conditions\" item 1, we can clear the data in all 4 main screens.\n
        By clicking on the \"About Application\" item 2, we will be taken to the \"About Application\" screen.\n
        By clicking on the \"Exit\" item 3, we will exit the application.\n
        By clicking on the right \"History\" button in the upper toolbar, we will go to the \"History\" screen.\n
        About screen. In it, the user can learn about the features of the application and how to use the application.\n
        There are 2 buttons in the top toolbar on this screen. By clicking on the left arrow back, we will return to the 4 main screens. By clicking on the right, you can contact the creator of the application.\n
        History screen. All previously solved tasks are saved here. We can delete a solution by clicking on the cross at a particular solution or by \“sweeping\” an element with a solution on the screen to the left or right. We can also click on the solution of interest to us and the resulting solution will be displayed on the screen along with a graph and detailed information about the solution. There are 2 buttons in the top toolbar on this screen. By clicking on the left arrow back, we will return to the 4 main screens. By clicking on the right \"Delete All\", we will clear the history of previously saved solutions.\n\n
        Have a question? Write to the mail: kainullov@gmail.com\n
    </string>

</resources>
